# OOP_1_lab

./: .gitignore  CMakeLists.txt  function.h  main.cpp
include/: Figure.h  IValidateFigure.h  Pentagon.h  Point.h  Rhomb.h  Trapezoid.h  ValidateFigure.h  ValidatePentagon.h  ValidateRhomb.h  ValidateTrapezoid.h  four.h
src/: Figure.cpp  Four.cpp  Pentagon.cpp  Point.cpp  Rhomb.cpp  Trapezoid.cpp  ValidateFigure.cpp  ValidatePentagon.cpp  ValidateRhomb.cpp  ValidateTrapezoid.cpp  function_first.h  function_fourth.h  function_second.h  function_third.h  functions.cpp  functions.h  main.cpp
test/: test.cpp
